tests/baselines/reference/parserAccessors9(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserAccessors9.ts(1,15): error TS1049: A 'set' accessor must have exactly one parameter.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserAccessors9.ts (1 errors) ====
    var v = { set foo(a, b) { } }
                  ~~~
!!! error TS1049: A 'set' accessor must have exactly one parameter.